master fix prod navbar links being invisible
Fix[master]: Override the opcaity of the nav.item bootstrap class to always show 100%

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -59,6 +59,9 @@ iframe {
     display: block;
     margin: 0 auto 1em auto;
 }
+.nav.item {
+    opcaity: 100% !important;
+}
 .video-container {
     position: relative;
     padding-bottom: 56.25%;
